# tz_portal_group

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
migrations/models/: 0_20221224233248_init.py
src/: __main__.py  app.py  settings.py
src/api/v1/: __init__.py  numbers.py
src/models/: __init__.py  users.py
src/page/: __init__.py  page.py
src/routers/: __init__.py
src/routers/api/v1/: __init__.py  kinopoisk.py  numbers.py  user.py
src/routers/page/: __init__.py  page.py
src/schemas/: token.py
src/service/: auth.py  ws.py
src/test/: test_utils.py
src/utils/: get_value_remains.py  kinopoisk.py
src/websocket/: __init__.py  ws.py
