[tool.poetry]
name = "tz-portal-groups"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tz_portal_groups"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
websockets = "^10.4"
aiohttp = "^3.8.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aerich = "^0.7.1"
python-multipart = "^0.0.5"



[tool.aerich]
tortoise_orm = "src.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
